[refactor] 일정 api 분리 및 리팩토링