@@ -21,9 +21,8 @@ import com.triptune.domain.schedule.repository.TravelScheduleRepository;
 import com.triptune.domain.travel.entity.TravelImage;
 import com.triptune.domain.travel.entity.TravelPlace;
 import com.triptune.domain.travel.repository.TravelImageRepository;
-import com.triptune.domain.travel.repository.TravelPlacePlaceRepository;
+import com.triptune.domain.travel.repository.TravelPlaceRepository;
 import com.triptune.global.enumclass.ErrorCode;
-import org.hibernate.sql.Update;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -39,7 +38,6 @@ import org.springframework.web.context.WebApplicationContext;
 import org.springframework.web.filter.CharacterEncodingFilter;
 
 import java.time.LocalDate;
-import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
@@ -54,12 +52,12 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 @SpringBootTest
 @ActiveProfiles("test")
 @TestPropertySource(locations = "classpath:application-test.yml")
-public class ScheduleApiControllerTests extends ScheduleTest {
+public class ScheduleControllerTest extends ScheduleTest {
     private final WebApplicationContext wac;
     private final TravelScheduleRepository travelScheduleRepository;
     private final TravelAttendeeRepository travelAttendeeRepository;
     private final MemberRepository memberRepository;
-    private final TravelPlacePlaceRepository travelPlaceRepository;
+    private final TravelPlaceRepository travelPlaceRepository;
     private final CountryRepository countryRepository;
     private final CityRepository cityRepository;
     private final DistrictRepository districtRepository;
@@ -84,7 +82,7 @@ public class ScheduleApiControllerTests extends ScheduleTest {
 
 
     @Autowired
-    public ScheduleApiControllerTests(WebApplicationContext wac, TravelScheduleRepository travelScheduleRepository, TravelAttendeeRepository travelAttendeeRepository, MemberRepository memberRepository, TravelPlacePlaceRepository travelPlaceRepository, CountryRepository countryRepository, CityRepository cityRepository, DistrictRepository districtRepository, ApiCategoryRepository apiCategoryRepository, TravelImageRepository travelImageRepository, TravelRouteRepository travelRouteRepository, ApiContentTypeRepository apiContentTypeRepository, ProfileImageRepository profileImageRepository) {
+    public ScheduleControllerTest(WebApplicationContext wac, TravelScheduleRepository travelScheduleRepository, TravelAttendeeRepository travelAttendeeRepository, MemberRepository memberRepository, TravelPlaceRepository travelPlaceRepository, CountryRepository countryRepository, CityRepository cityRepository, DistrictRepository districtRepository, ApiCategoryRepository apiCategoryRepository, TravelImageRepository travelImageRepository, TravelRouteRepository travelRouteRepository, ApiContentTypeRepository apiContentTypeRepository, ProfileImageRepository profileImageRepository) {
         this.wac = wac;
         this.travelScheduleRepository = travelScheduleRepository;
         this.travelAttendeeRepository = travelAttendeeRepository;
@@ -131,44 +129,36 @@ public class ScheduleApiControllerTests extends ScheduleTest {
         TravelImage travelImage3 = travelImageRepository.save(createTravelImage(travelPlace2, "test1", true));
         TravelImage travelImage4 = travelImageRepository.save(createTravelImage(travelPlace2, "test2", false));
         travelPlace1.setApiContentType(apiContentType);
-        travelPlace1.setTravelImageList(Arrays.asList(travelImage1, travelImage2));
+        travelPlace1.setTravelImageList(new ArrayList<>(List.of(travelImage1, travelImage2)));
         travelPlace2.setApiContentType(apiContentType);
-        travelPlace2.setTravelImageList(Arrays.asList(travelImage3, travelImage4));
-
+        travelPlace2.setTravelImageList(new ArrayList<>(List.of(travelImage3, travelImage4)));
 
         schedule1 = travelScheduleRepository.save(createTravelSchedule(null,"테스트1"));
         schedule2 = travelScheduleRepository.save(createTravelSchedule(null,"테스트2"));
         schedule3 = travelScheduleRepository.save(createTravelSchedule(null,"테스트3"));
-
-
     }
 
     @Test
-    @DisplayName("getSchedules(): 내가 참석한 여행지 목록 조회")
+    @DisplayName("getSchedules(): 전체 일정 목록 조회")
     @WithMockUser(username = "member1")
     void getSchedules() throws Exception {
-        // given
         TravelAttendee attendee1 = travelAttendeeRepository.save(createTravelAttendee(member1, schedule1, AttendeeRole.AUTHOR, AttendeePermission.ALL));
-        TravelAttendee attendee2 = travelAttendeeRepository.save(createTravelAttendee(member1, schedule2, AttendeeRole.AUTHOR, AttendeePermission.ALL));
-        TravelAttendee attendee3 = travelAttendeeRepository.save(createTravelAttendee(member2, schedule1, AttendeeRole.GUEST, AttendeePermission.READ));
+        TravelAttendee attendee2 = travelAttendeeRepository.save(createTravelAttendee(member2, schedule1, AttendeeRole.GUEST, AttendeePermission.READ));
+        TravelAttendee attendee3 = travelAttendeeRepository.save(createTravelAttendee(member1, schedule2, AttendeeRole.AUTHOR, AttendeePermission.ALL));
         TravelAttendee attendee4 = travelAttendeeRepository.save(createTravelAttendee(member3, schedule3, AttendeeRole.AUTHOR, AttendeePermission.ALL));
+
+        schedule1.setTravelAttendeeList(new ArrayList<>(List.of(attendee1, attendee2)));
+        schedule2.setTravelAttendeeList(new ArrayList<>(List.of(attendee3)));
+        schedule3.setTravelAttendeeList(new ArrayList<>(List.of(attendee4)));
 
         TravelRoute route1 = travelRouteRepository.save(createTravelRoute(schedule1, travelPlace1, 1));
         TravelRoute route2 = travelRouteRepository.save(createTravelRoute(schedule1, travelPlace2, 2));
         TravelRoute route3 = travelRouteRepository.save(createTravelRoute(schedule2, travelPlace1, 1));
         TravelRoute route4 = travelRouteRepository.save(createTravelRoute(schedule2, travelPlace2, 2));
+        schedule1.setTravelRouteList(new ArrayList<>(List.of(route1, route2)));
+        schedule2.setTravelRouteList(new ArrayList<>(List.of(route3, route4)));
 
-        member1.setTravelAttendeeList(List.of(attendee1, attendee2));
-        member2.setTravelAttendeeList(List.of(attendee3));
-        member3.setTravelAttendeeList(List.of(attendee4));
 
-        schedule1.setTravelRouteList(Arrays.asList(route1, route2));
-        schedule2.setTravelRouteList(Arrays.asList(route3, route4));
-        schedule1.setTravelAttendeeList(Arrays.asList(attendee1, attendee3));
-        schedule2.setTravelAttendeeList(List.of(attendee2));
-        schedule3.setTravelAttendeeList(List.of(attendee4));
-
-        // when, then
         mockMvc.perform(get("/api/schedules")
                 .param("page", "1"))
                 .andExpect(status().isOk())
@@ -181,30 +171,16 @@ public class ScheduleApiControllerTests extends ScheduleTest {
     }
 
     @Test
-    @DisplayName("getSchedules(): 내가 참석한 여행지 목록 조회 시 여행 루트 데이터가 없는 경우")
-    @WithMockUser(username = "member1")
+    @DisplayName("getSchedules(): 전체 일정 목록 조회 시 여행 루트 데이터가 없는 경우")
+    @WithMockUser(username = "member3")
     void getSchedulesNoRouteData() throws Exception {
-        // given
-        schedule1.setUpdatedAt(LocalDateTime.now().minusDays(3));
+        TravelAttendee attendee1 = travelAttendeeRepository.save(createTravelAttendee(member3, schedule3, AttendeeRole.AUTHOR, AttendeePermission.ALL));
+        schedule3.setTravelAttendeeList(new ArrayList<>(List.of(attendee1)));
 
-        TravelAttendee attendee1 = travelAttendeeRepository.save(createTravelAttendee(member1, schedule1, AttendeeRole.AUTHOR, AttendeePermission.ALL));
-        TravelAttendee attendee2 = travelAttendeeRepository.save(createTravelAttendee(member1, schedule2, AttendeeRole.AUTHOR, AttendeePermission.ALL));
-        TravelAttendee attendee3 = travelAttendeeRepository.save(createTravelAttendee(member2, schedule1, AttendeeRole.GUEST, AttendeePermission.READ));
-        TravelAttendee attendee4 = travelAttendeeRepository.save(createTravelAttendee(member3, schedule3, AttendeeRole.AUTHOR, AttendeePermission.ALL));
-
-        member1.setTravelAttendeeList(List.of(attendee1, attendee2));
-        member2.setTravelAttendeeList(List.of(attendee3));
-        member3.setTravelAttendeeList(List.of(attendee4));
-
-        schedule1.setTravelAttendeeList(Arrays.asList(attendee1, attendee3));
-        schedule2.setTravelAttendeeList(List.of(attendee2));
-        schedule3.setTravelAttendeeList(List.of(attendee4));
-
-        // when, then
         mockMvc.perform(get("/api/schedules")
                         .param("page", "1"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.data.totalElements").value(2))
+                .andExpect(jsonPath("$.data.totalElements").value(1))
                 .andExpect(jsonPath("$.data.content[0].sinceUpdate").exists())
                 .andExpect(jsonPath("$.data.content[0].scheduleName").exists())
                 .andExpect(jsonPath("$.data.content[0].thumbnailUrl").isEmpty());
@@ -212,15 +188,101 @@ public class ScheduleApiControllerTests extends ScheduleTest {
     }
 
     @Test
-    @DisplayName("getSchedules(): 내가 참석한 여행지 목록 조회 시 데이터 없는 경우")
+    @DisplayName("getSchedules(): 전체 일정 목록 조회 시 데이터 없는 경우")
     @WithMockUser(username = "member1")
     void getSchedulesWithoutData() throws Exception {
-        // given
-        // when, then
         mockMvc.perform(get("/api/schedules")
                         .param("page", "1"))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.data.totalElements").value(0))
+                .andExpect(jsonPath("$.data.content").isEmpty());
+    }
+
+    @Test
+    @DisplayName("getSharedSchedules(): 공유된 일정 목록 조회")
+    @WithMockUser(username = "member1")
+    void getSharedSchedules() throws Exception {
+        TravelAttendee attendee1 = travelAttendeeRepository.save(createTravelAttendee(member1, schedule1, AttendeeRole.AUTHOR, AttendeePermission.ALL));
+        TravelAttendee attendee2 = travelAttendeeRepository.save(createTravelAttendee(member2, schedule1, AttendeeRole.GUEST, AttendeePermission.READ));
+        TravelAttendee attendee3 = travelAttendeeRepository.save(createTravelAttendee(member1, schedule2, AttendeeRole.AUTHOR, AttendeePermission.ALL));
+        TravelAttendee attendee4 = travelAttendeeRepository.save(createTravelAttendee(member1, schedule3, AttendeeRole.AUTHOR, AttendeePermission.ALL));
+
+        schedule1.setTravelAttendeeList(new ArrayList<>(List.of(attendee1, attendee2)));
+        schedule2.setTravelAttendeeList(new ArrayList<>(List.of(attendee3)));
+        schedule3.setTravelAttendeeList(new ArrayList<>(List.of(attendee4)));
+
+        TravelRoute route1 = travelRouteRepository.save(createTravelRoute(schedule1, travelPlace1, 1));
+        TravelRoute route2 = travelRouteRepository.save(createTravelRoute(schedule1, travelPlace2, 2));
+        TravelRoute route3 = travelRouteRepository.save(createTravelRoute(schedule2, travelPlace1, 1));
+        TravelRoute route4 = travelRouteRepository.save(createTravelRoute(schedule2, travelPlace2, 2));
+        schedule1.setTravelRouteList(Arrays.asList(route1, route2));
+        schedule2.setTravelRouteList(Arrays.asList(route3, route4));
+
+
+        mockMvc.perform(get("/api/schedules/shared")
+                        .param("page", "1"))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.data.totalElements").value(3))
+                .andExpect(jsonPath("$.data.totalSharedElements").value(1))
+                .andExpect(jsonPath("$.data.content[0].sinceUpdate").exists())
+                .andExpect(jsonPath("$.data.content[0].scheduleName").exists())
+                .andExpect(jsonPath("$.data.content[0].thumbnailUrl").exists())
+                .andExpect(jsonPath("$.data.content[0].role").exists());
+    }
+
+    @Test
+    @DisplayName("getSharedSchedules(): 공유된 일정 목록 조회 시 여행 루트 데이터가 없는 경우")
+    @WithMockUser(username = "member1")
+    void getSharedSchedulesNoRouteData() throws Exception {
+        TravelAttendee attendee1 = travelAttendeeRepository.save(createTravelAttendee(member1, schedule1, AttendeeRole.AUTHOR, AttendeePermission.ALL));
+        TravelAttendee attendee2 = travelAttendeeRepository.save(createTravelAttendee(member2, schedule1, AttendeeRole.GUEST, AttendeePermission.READ));
+        TravelAttendee attendee3 = travelAttendeeRepository.save(createTravelAttendee(member1, schedule2, AttendeeRole.AUTHOR, AttendeePermission.ALL));
+        TravelAttendee attendee4 = travelAttendeeRepository.save(createTravelAttendee(member1, schedule3, AttendeeRole.AUTHOR, AttendeePermission.ALL));
+
+        schedule1.setTravelAttendeeList(new ArrayList<>(List.of(attendee1, attendee2)));
+        schedule2.setTravelAttendeeList(new ArrayList<>(List.of(attendee3)));
+        schedule3.setTravelAttendeeList(new ArrayList<>(List.of(attendee4)));
+
+        mockMvc.perform(get("/api/schedules/shared")
+                        .param("page", "1"))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.data.totalElements").value(3))
+                .andExpect(jsonPath("$.data.totalSharedElements").value(1))
+                .andExpect(jsonPath("$.data.content[0].sinceUpdate").exists())
+                .andExpect(jsonPath("$.data.content[0].scheduleName").exists())
+                .andExpect(jsonPath("$.data.content[0].thumbnailUrl").isEmpty());
+
+    }
+
+    @Test
+    @DisplayName("getSharedSchedules(): 공유된 일정 목록 조회 시 공유된 일정 없는 경우")
+    @WithMockUser(username = "member1")
+    void getSharedSchedulesWithoutSharedData() throws Exception {
+        TravelAttendee attendee1 = travelAttendeeRepository.save(createTravelAttendee(member1, schedule1, AttendeeRole.AUTHOR, AttendeePermission.ALL));
+        TravelAttendee attendee3 = travelAttendeeRepository.save(createTravelAttendee(member1, schedule2, AttendeeRole.AUTHOR, AttendeePermission.ALL));
+        TravelAttendee attendee4 = travelAttendeeRepository.save(createTravelAttendee(member1, schedule3, AttendeeRole.AUTHOR, AttendeePermission.ALL));
+
+        schedule1.setTravelAttendeeList(new ArrayList<>(List.of(attendee1)));
+        schedule2.setTravelAttendeeList(new ArrayList<>(List.of(attendee3)));
+        schedule3.setTravelAttendeeList(new ArrayList<>(List.of(attendee4)));
+
+        mockMvc.perform(get("/api/schedules/shared")
+                        .param("page", "1"))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.data.totalElements").value(3))
+                .andExpect(jsonPath("$.data.totalSharedElements").value(0))
+                .andExpect(jsonPath("$.data.content").isEmpty());
+    }
+
+    @Test
+    @DisplayName("getSharedSchedules(): 공유된 일정 목록 조회 시 데이터 없는 경우")
+    @WithMockUser(username = "member1")
+    void getSharedSchedulesWithoutData() throws Exception {
+        mockMvc.perform(get("/api/schedules/shared")
+                        .param("page", "1"))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.data.totalElements").value(0))
+                .andExpect(jsonPath("$.data.totalSharedElements").value(0))
                 .andExpect(jsonPath("$.data.content").isEmpty());
     }
 
@@ -280,8 +342,8 @@ public class ScheduleApiControllerTests extends ScheduleTest {
         TravelAttendee attendee1 = travelAttendeeRepository.save(createTravelAttendee(member1, schedule1, AttendeeRole.AUTHOR, AttendeePermission.ALL));
         TravelAttendee attendee2 = travelAttendeeRepository.save(createTravelAttendee(member2, schedule1, AttendeeRole.GUEST, AttendeePermission.READ));
 
-        member1.setTravelAttendeeList(List.of(attendee1, attendee2));
-        schedule1.setTravelAttendeeList(Arrays.asList(attendee1, attendee2));
+        member1.setTravelAttendeeList(new ArrayList<>(List.of(attendee1, attendee2)));
+        schedule1.setTravelAttendeeList(new ArrayList<>(List.of(attendee1, attendee2)));
 
 
         // when, then
@@ -308,8 +370,8 @@ public class ScheduleApiControllerTests extends ScheduleTest {
         TravelAttendee attendee1 = travelAttendeeRepository.save(createTravelAttendee(member1, schedule1, AttendeeRole.AUTHOR, AttendeePermission.ALL));
         TravelAttendee attendee2 = travelAttendeeRepository.save(createTravelAttendee(member2, schedule1, AttendeeRole.GUEST, AttendeePermission.READ));
         
-        member1.setTravelAttendeeList(List.of(attendee1, attendee2));
-        schedule1.setTravelAttendeeList(Arrays.asList(attendee1, attendee2));
+        member1.setTravelAttendeeList(new ArrayList<>(List.of(attendee1, attendee2)));
+        schedule1.setTravelAttendeeList(new ArrayList<>(List.of(attendee1, attendee2)));
 
 
         // when, then
@@ -324,16 +386,25 @@ public class ScheduleApiControllerTests extends ScheduleTest {
     }
 
     @Test
-    @DisplayName("getScheduleDetail(): 일정 조회 시 일정 데이터 존재하지 않아 예외 발생")
+    @DisplayName("getScheduleDetail(): 일정 상세 조회 시 일정 데이터 존재하지 않아 예외 발생")
     @WithMockUser(username = "member1")
     void getScheduleDetail_dataNotFoundException() throws Exception {
-        // given
-        // when, then
         mockMvc.perform(get("/api/schedules/{scheduleId}", 0L)
                         .param("page", "1"))
                 .andExpect(status().isNotFound())
                 .andExpect(jsonPath("$.success").value(false))
                 .andExpect(jsonPath("$.message").value(ErrorCode.SCHEDULE_NOT_FOUND.getMessage()));
+    }
+
+
+    @Test
+    @DisplayName("getScheduleDetail(): 일정 상세 조회 시 일정에 접근 권한이 없어 예외 발생")
+    @WithMockUser(username = "member1")
+    void getScheduleDetailNotAttendee_forbiddenScheduleException() throws Exception {
+        mockMvc.perform(delete("/api/schedules/{scheduleId}", schedule2.getScheduleId()))
+                .andExpect(status().isForbidden())
+                .andExpect(jsonPath("$.success").value(false))
+                .andExpect(jsonPath("$.message").value(ErrorCode.FORBIDDEN_ACCESS_SCHEDULE.getMessage()));
     }
 
     @Test
@@ -355,7 +426,7 @@ public class ScheduleApiControllerTests extends ScheduleTest {
         RouteRequest routeRequest1 = createRouteRequest(1, travelPlace1.getPlaceId());
         RouteRequest routeRequest2 = createRouteRequest(2, travelPlace2.getPlaceId());
 
-        UpdateScheduleRequest request = createUpdateScheduleRequest(Arrays.asList(routeRequest1, routeRequest2));
+        UpdateScheduleRequest request = createUpdateScheduleRequest(new ArrayList<>(List.of(routeRequest1, routeRequest2)));
 
         // when
         mockMvc.perform(patch("/api/schedules/{scheduleId}", schedule1.getScheduleId())
@@ -377,12 +448,8 @@ public class ScheduleApiControllerTests extends ScheduleTest {
         TravelAttendee attendee1 = travelAttendeeRepository.save(createTravelAttendee(member1, schedule1, AttendeeRole.AUTHOR, AttendeePermission.ALL));
         TravelAttendee attendee3 = travelAttendeeRepository.save(createTravelAttendee(member2, schedule1, AttendeeRole.GUEST, AttendeePermission.READ));
 
-        TravelRoute route1 = travelRouteRepository.save(createTravelRoute(schedule1, travelPlace1, 1));
-        TravelRoute route2 = travelRouteRepository.save(createTravelRoute(schedule1, travelPlace2, 2));
-
         member1.setTravelAttendeeList(new ArrayList<>(List.of(attendee1)));
         member2.setTravelAttendeeList(new ArrayList<>(List.of(attendee3)));
-        schedule1.setTravelRouteList(new ArrayList<>(List.of(route1, route2)));
         schedule1.setTravelAttendeeList(new ArrayList<>(List.of(attendee1, attendee3)));
 
         RouteRequest routeRequest1 = createRouteRequest(1, travelPlace1.getPlaceId());
@@ -414,7 +481,7 @@ public class ScheduleApiControllerTests extends ScheduleTest {
         schedule1.setTravelAttendeeList(new ArrayList<>(List.of(attendee1, attendee3)));
 
         RouteRequest routeRequest1 = createRouteRequest(1, travelPlace1.getPlaceId());
-        UpdateScheduleRequest request = createUpdateScheduleRequest(List.of(routeRequest1));
+        UpdateScheduleRequest request = createUpdateScheduleRequest(new ArrayList<>(List.of(routeRequest1)));
 
         // when
         mockMvc.perform(patch("/api/schedules/{scheduleId}", schedule1.getScheduleId())
@@ -436,27 +503,20 @@ public class ScheduleApiControllerTests extends ScheduleTest {
         TravelAttendee attendee1 = travelAttendeeRepository.save(createTravelAttendee(member1, schedule1, AttendeeRole.AUTHOR, AttendeePermission.ALL));
         TravelAttendee attendee3 = travelAttendeeRepository.save(createTravelAttendee(member2, schedule1, AttendeeRole.GUEST, AttendeePermission.READ));
 
-        TravelRoute route1 = travelRouteRepository.save(createTravelRoute(schedule1, travelPlace1, 1));
-        TravelRoute route2 = travelRouteRepository.save(createTravelRoute(schedule1, travelPlace2, 2));
-
-        member1.setTravelAttendeeList(List.of(attendee1));
-        member2.setTravelAttendeeList(List.of(attendee3));
-        schedule1.setTravelRouteList(Arrays.asList(route1, route2));
-        schedule1.setTravelAttendeeList(Arrays.asList(attendee1, attendee3));
+        member1.setTravelAttendeeList(new ArrayList<>(List.of(attendee1)));
+        member2.setTravelAttendeeList(new ArrayList<>(List.of(attendee3)));
+        schedule1.setTravelAttendeeList(new ArrayList<>(List.of(attendee1, attendee3)));
 
         RouteRequest routeRequest1 = createRouteRequest(1, travelPlace1.getPlaceId());
-        UpdateScheduleRequest request = createUpdateScheduleRequest(List.of(routeRequest1));
+        UpdateScheduleRequest request = createUpdateScheduleRequest(new ArrayList<>(List.of(routeRequest1)));
 
-        // when
+        // when, then
         mockMvc.perform(patch("/api/schedules/{scheduleId}", schedule1.getScheduleId())
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(toJsonString(request)))
                 .andExpect(status().isForbidden())
                 .andExpect(jsonPath("$.message").value(ErrorCode.FORBIDDEN_ACCESS_SCHEDULE.getMessage()));
 
-        // then
-        assertEquals(schedule1.getScheduleName(), "테스트1");
-        assertEquals(schedule1.getTravelRouteList().size(), 2);
     }
 
 
@@ -468,62 +528,35 @@ public class ScheduleApiControllerTests extends ScheduleTest {
         TravelAttendee attendee1 = travelAttendeeRepository.save(createTravelAttendee(member1, schedule1, AttendeeRole.AUTHOR, AttendeePermission.ALL));
         TravelAttendee attendee3 = travelAttendeeRepository.save(createTravelAttendee(member2, schedule1, AttendeeRole.GUEST, AttendeePermission.READ));
 
-        TravelRoute route1 = travelRouteRepository.save(createTravelRoute(schedule1, travelPlace1, 1));
-        TravelRoute route2 = travelRouteRepository.save(createTravelRoute(schedule1, travelPlace2, 2));
-
-        member1.setTravelAttendeeList(List.of(attendee1));
-        member2.setTravelAttendeeList(List.of(attendee3));
-        schedule1.setTravelRouteList(Arrays.asList(route1, route2));
-        schedule1.setTravelAttendeeList(Arrays.asList(attendee1, attendee3));
+        member1.setTravelAttendeeList(new ArrayList<>(List.of(attendee1)));
+        member2.setTravelAttendeeList(new ArrayList<>(List.of(attendee3)));
+        schedule1.setTravelAttendeeList(new ArrayList<>(List.of(attendee1, attendee3)));
 
         RouteRequest routeRequest1 = createRouteRequest(1, travelPlace1.getPlaceId());
-        UpdateScheduleRequest request = createUpdateScheduleRequest(List.of(routeRequest1));
+        UpdateScheduleRequest request = createUpdateScheduleRequest(new ArrayList<>(List.of(routeRequest1)));
 
-        // when
+        // when, then
         mockMvc.perform(patch("/api/schedules/{scheduleId}", schedule1.getScheduleId())
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(toJsonString(request)))
                 .andExpect(status().isForbidden())
                 .andExpect(jsonPath("$.message").value(ErrorCode.FORBIDDEN_EDIT_SCHEDULE.getMessage()));
-
-        // then
-        assertEquals(schedule1.getScheduleName(), "테스트1");
-        assertEquals(schedule1.getTravelRouteList().size(), 2);
     }
 
-
-    @Test
-    @DisplayName("getTravelPlaces(): 여행지 조회 성공")
-    @WithMockUser(username = "member1")
-    void getTravelPlaces() throws Exception {
-        // given
-        // when, then
-        mockMvc.perform(get("/api/schedules/{scheduleId}/travels", schedule1.getScheduleId())
-                        .param("page", "1"))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.data.totalElements").value(1))
-                .andExpect(jsonPath("$.data.content[0].district").value(travelPlace2.getDistrict().getDistrictName()))
-                .andExpect(jsonPath("$.data.content[0].placeName").value(travelPlace2.getPlaceName()))
-                .andExpect(jsonPath("$.data.content[0].longitude").isNotEmpty())
-                .andExpect(jsonPath("$.data.content[0].latitude").isNotEmpty())
-                .andExpect(jsonPath("$.data.content[0].thumbnailUrl").exists());
-    }
 
     @Test
     @DisplayName("deleteSchedule(): 일정 삭제")
     @WithMockUser(username = "member1")
     void deleteSchedule() throws Exception {
+        // given
         TravelAttendee attendee1 = travelAttendeeRepository.save(createTravelAttendee(member1, schedule1, AttendeeRole.AUTHOR, AttendeePermission.ALL));
-        TravelAttendee attendee3 = travelAttendeeRepository.save(createTravelAttendee(member2, schedule1, AttendeeRole.GUEST, AttendeePermission.READ));
-
-        TravelRoute route1 = travelRouteRepository.save(createTravelRoute(schedule1, travelPlace1, 1));
-        TravelRoute route2 = travelRouteRepository.save(createTravelRoute(schedule1, travelPlace2, 2));
+        TravelAttendee attendee2 = travelAttendeeRepository.save(createTravelAttendee(member2, schedule1, AttendeeRole.GUEST, AttendeePermission.READ));
 
         member1.setTravelAttendeeList(new ArrayList<>(List.of(attendee1)));
-        member2.setTravelAttendeeList(new ArrayList<>(List.of(attendee3)));
-        schedule1.setTravelRouteList(new ArrayList<>(List.of(route1, route2)));
-        schedule1.setTravelAttendeeList(new ArrayList<>(List.of(attendee1, attendee3)));
+        member2.setTravelAttendeeList(new ArrayList<>(List.of(attendee2)));
+        schedule1.setTravelAttendeeList(new ArrayList<>(List.of(attendee1, attendee2)));
 
+        // when, then
         mockMvc.perform(delete("/api/schedules/{scheduleId}", schedule1.getScheduleId()))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.success").value(true));
@@ -534,157 +567,21 @@ public class ScheduleApiControllerTests extends ScheduleTest {
     @DisplayName("deleteSchedule(): 일정 삭제 시 삭제 권한이 없는 사용자 요청으로 예외 발생")
     @WithMockUser(username = "member2")
     void deleteSchedule_forbiddenScheduleException() throws Exception {
+        // given
         TravelAttendee attendee1 = travelAttendeeRepository.save(createTravelAttendee(member1, schedule1, AttendeeRole.AUTHOR, AttendeePermission.ALL));
-        TravelAttendee attendee3 = travelAttendeeRepository.save(createTravelAttendee(member2, schedule1, AttendeeRole.GUEST, AttendeePermission.READ));
-
-        TravelRoute route1 = travelRouteRepository.save(createTravelRoute(schedule1, travelPlace1, 1));
-        TravelRoute route2 = travelRouteRepository.save(createTravelRoute(schedule1, travelPlace2, 2));
+        TravelAttendee attendee2 = travelAttendeeRepository.save(createTravelAttendee(member2, schedule1, AttendeeRole.GUEST, AttendeePermission.READ));
 
         member1.setTravelAttendeeList(new ArrayList<>(List.of(attendee1)));
-        member2.setTravelAttendeeList(new ArrayList<>(List.of(attendee3)));
-        schedule1.setTravelRouteList(new ArrayList<>(List.of(route1, route2)));
-        schedule1.setTravelAttendeeList(new ArrayList<>(List.of(attendee1, attendee3)));
+        member2.setTravelAttendeeList(new ArrayList<>(List.of(attendee2)));
+        schedule1.setTravelAttendeeList(new ArrayList<>(List.of(attendee1, attendee2)));
 
+        // when, then
         mockMvc.perform(delete("/api/schedules/{scheduleId}", schedule1.getScheduleId()))
                 .andExpect(status().isForbidden())
                 .andExpect(jsonPath("$.success").value(false))
                 .andExpect(jsonPath("$.message").value(ErrorCode.FORBIDDEN_DELETE_SCHEDULE.getMessage()));
 
     }
-
-    @Test
-    @DisplayName("getTravelPlaces(): 여행지 조회 시 여행지 데이터 존재하지 않는 경우")
-    @WithMockUser(username = "member1")
-    void getTravelPlacesWithoutData() throws Exception {
-        // given
-        travelPlaceRepository.deleteAll();
-        
-        // when, then
-        mockMvc.perform(get("/api/schedules/{scheduleId}/travels", schedule1.getScheduleId())
-                        .param("page", "1"))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.data.totalElements").value(0))
-                .andExpect(jsonPath("$.data.content").isEmpty());
-    }
-
-
-    @Test
-    @DisplayName("getTravelPlaces(): 여행지 조회 시 일정 데이터 존재하지 않아 예외 발생")
-    @WithMockUser(username = "member1")
-    void getTravelPlaces_dataNotFoundException() throws Exception {
-        // given
-        // when, then
-        mockMvc.perform(get("/api/schedules/{scheduleId}/travels", 0L)
-                        .param("page", "1"))
-                .andExpect(status().isNotFound())
-                .andExpect(jsonPath("$.success").value(false))
-                .andExpect(jsonPath("$.message").value(ErrorCode.SCHEDULE_NOT_FOUND.getMessage()));
-    }
-
-
-    @Test
-    @DisplayName("searchTravelPlaces(): 여행지 검색 성공")
-    @WithMockUser(username = "member1")
-    void searchTravelPlaces() throws Exception {
-        // given
-        // when, then
-        mockMvc.perform(get("/api/schedules/{scheduleId}/travels/search", schedule1.getScheduleId())
-                        .param("page", "1")
-                        .param("keyword", "강남"))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.data.totalElements").value(1))
-                .andExpect(jsonPath("$.data.content[0].district").value(travelPlace1.getDistrict().getDistrictName()))
-                .andExpect(jsonPath("$.data.content[0].placeName").value(travelPlace1.getPlaceName()))
-                .andExpect(jsonPath("$.data.content[0].longitude").isNotEmpty())
-                .andExpect(jsonPath("$.data.content[0].latitude").isNotEmpty())
-                .andExpect(jsonPath("$.data.content[0].thumbnailUrl").exists());
-    }
-
-    @Test
-    @DisplayName("searchTravelPlaces(): 여행지 검색 시 검색 결과가 존재하지 않는 경우")
-    @WithMockUser(username = "member1")
-    void searchTravelPlacesWithoutData() throws Exception {
-        // given
-        // when, then
-        mockMvc.perform(get("/api/schedules/{scheduleId}/travels/search", schedule1.getScheduleId())
-                        .param("page", "1")
-                        .param("keyword", "ㅁㄴㅇㄹ"))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.data.totalElements").value(0))
-                .andExpect(jsonPath("$.data.content").isEmpty());
-    }
-
-
-    @Test
-    @DisplayName("searchTravelPlaces(): 여행지 검색 시 일정 데이터 존재하지 않아 예외 발생")
-    @WithMockUser(username = "member1")
-    void searchTravelPlaces_dataNotFoundException() throws Exception {
-        // given
-        // when, then
-        mockMvc.perform(get("/api/schedules/{scheduleId}/travels", 0L)
-                        .param("page", "1")
-                        .param("keyword", "ㅁㄴㅇㄹ"))
-                .andExpect(status().isNotFound())
-                .andExpect(jsonPath("$.success").value(false))
-                .andExpect(jsonPath("$.message").value(ErrorCode.SCHEDULE_NOT_FOUND.getMessage()));
-    }
-
-    @Test
-    @DisplayName("getTravelRoutes(): 여행 루트 조회 성공")
-    @WithMockUser(username = "member1")
-    void getTravelRoutes() throws Exception {
-        // given
-        TravelRoute route1 = travelRouteRepository.save(createTravelRoute(schedule1, travelPlace1, 1));
-        TravelRoute route2 = travelRouteRepository.save(createTravelRoute(schedule1, travelPlace1, 2));
-        TravelRoute route3 = travelRouteRepository.save(createTravelRoute(schedule1, travelPlace2, 3));
-
-        List<TravelRoute> travelRouteListAll = Arrays.asList(route1, route2, route3);
-        List<TravelRoute> travelRouteList1 = Arrays.asList(route1, route2);
-        List<TravelRoute> travelRouteList2 = List.of(route3);
-
-        schedule1.setTravelRouteList(travelRouteListAll);
-        travelPlace1.setTravelRouteList(travelRouteList1);
-        travelPlace2.setTravelRouteList(travelRouteList2);
-
-        // when, then
-        mockMvc.perform(get("/api/schedules/{scheduleId}/routes", schedule1.getScheduleId())
-                        .param("page", "1"))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.data.totalElements").value(3))
-                .andExpect(jsonPath("$.data.content[0].routeOrder").value(route1.getRouteOrder()))
-                .andExpect(jsonPath("$.data.content[0].placeId").value(travelPlace1.getPlaceId()))
-                .andExpect(jsonPath("$.data.content[1].routeOrder").value(route2.getRouteOrder()))
-                .andExpect(jsonPath("$.data.content[1].placeId").value(travelPlace1.getPlaceId()))
-                .andExpect(jsonPath("$.data.content[2].routeOrder").value(route3.getRouteOrder()))
-                .andExpect(jsonPath("$.data.content[2].placeId").value(travelPlace2.getPlaceId()));
-    }
-
-    @Test
-    @DisplayName("getTravelRoutes(): 여행 루트 조회 시 저장된 여행 루트 데이터 없는 경우")
-    @WithMockUser(username = "member1")
-    void getTravelRoutesWithoutData() throws Exception {
-        // given
-        // when, then
-         mockMvc.perform(get("/api/schedules/{scheduleId}/routes", schedule1.getScheduleId())
-                                .param("page", "1"))
-                        .andExpect(status().isOk())
-                        .andExpect(jsonPath("$.data.totalElements").value(0))
-                        .andExpect(jsonPath("$.data.content").isEmpty());
-    }
-
-    @Test
-    @DisplayName("getTravelRoutes(): 여행 루트 조회 시 일정 데이터 존재하지 않아 예외 발생")
-    @WithMockUser(username = "member1")
-    void getTravelRoutes_dataNotFoundException() throws Exception {
-        // given
-        // when, then
-        mockMvc.perform(get("/api/schedules/{scheduleId}/travels", 0L)
-                        .param("page", "1"))
-                .andExpect(status().isNotFound())
-                .andExpect(jsonPath("$.success").value(false))
-                .andExpect(jsonPath("$.message").value(ErrorCode.SCHEDULE_NOT_FOUND.getMessage()));
-    }
-
 
 
 }
